Added project memory game

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -53,6 +53,14 @@
         </ul>
         </div> 
       </div>
+	  <div class="row" id="projects">
+	  <div class="col-lg-12">
+	    <h1>Projects</h1>
+		<hr></br>
+		Memory game
+		<a href="https://pepa99.github.io/memory_game/" target="_blank"><img src="empty.png"></a>
+	  </div>
+	  </div>
       <div class="row" id="accomp">
       <div class="col-lg-12">
         <h1>Accomplishments:</h1>
