Changed projects section

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,7 +57,7 @@
 	  <div class="col-lg-12">
 	    <h1>Projects</h1>
 		<hr></br>
-		Memory game
+		<strong>Memory game</strong></br>
 		<a href="https://pepa99.github.io/memory_game/" target="_blank"><img src="empty.png"></a>
 	  </div>
 	  </div>
