--- a/slice and dice/index.html
+++ b/slice and dice/index.html
@@ -3,17 +3,78 @@
   <head>
     <title>Slice and dice</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
+	<script >
+	  var slideIndex = 1;
+showSlides(slideIndex);
+
+// Next/previous controls
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+// Thumbnail image controls
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  //var dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+  }
+  //for (i = 0; i < dots.length; i++) {
+      //dots[i].className = dots[i].className.replace(" active", "");
+  //}
+  slides[slideIndex-1].style.display = "block";
+  //dots[slideIndex-1].className += " active";
+}
+	</script>
   </head>
-  <body>
+  <body onload="showSlides(1);">
     <div class="container">
     <div class="header">
-	  <ul>
-	    <li>?<a href="#">HOME</a> &nbsp; &nbsp;</li>
-		<li><a href="#">ABOUT</a> &nbsp; &nbsp;</li>
-		<li><a href="#">WORK</a> &nbsp; &nbsp;</li>
-		<li><a href="#">SERVICES</a> &nbsp; &nbsp;</li>
-		<li><a href="#">BLOG</a> &nbsp; &nbsp; </li>
-	  </ul>
+	  <div class="mySlides fade" id="first">
+        <div class="nav">
+		  <ul>
+	        <li><a href="#">HOME</a> &nbsp; &nbsp;</li>
+		    <li><a href="#">ABOUT</a> &nbsp; &nbsp;</li>
+		    <li><a href="#">WORK</a> &nbsp; &nbsp;</li>
+		    <li><a href="#">SERVICES</a> &nbsp; &nbsp;</li>
+		    <li><a href="#">BLOG</a> &nbsp; &nbsp; </li>
+	      </ul>
+		</div>
+        <div class="text"><h1>Caption Text</h1></div>
+      </div>
+	  <div class="mySlides fade" id="second">
+        <div class="nav">
+		  <ul>
+	        <li><a href="#">HOME</a> &nbsp; &nbsp;</li>
+		    <li><a href="#">ABOUT</a> &nbsp; &nbsp;</li>
+		    <li><a href="#">WORK</a> &nbsp; &nbsp;</li>
+		    <li><a href="#">SERVICES</a> &nbsp; &nbsp;</li>
+		    <li><a href="#">BLOG</a> &nbsp; &nbsp; </li>
+	      </ul>
+		</div>
+        <div class="text"><h1>Caption Text</h1></div>
+      </div>
+	  <div class="mySlides fade" id="third">
+        <div class="nav">
+		  <ul>
+	        <li><a href="#">HOME</a> &nbsp; &nbsp;</li>
+		    <li><a href="#">ABOUT</a> &nbsp; &nbsp;</li>
+		    <li><a href="#">WORK</a> &nbsp; &nbsp;</li>
+		    <li><a href="#">SERVICES</a> &nbsp; &nbsp;</li>
+		    <li><a href="#">BLOG</a> &nbsp; &nbsp; </li>
+	      </ul>
+		</div>
+        <div class="text"><h1>Caption Text</h1></div>
+      </div>
+	  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
 	</div>
 	<div class="about">
 	  <h1>About us</h1>
@@ -36,7 +97,7 @@
 	  <p>Oprem dobro</p>
 	</div>
 	<div class="section2">
-	  <img src="pic1.jpg">
+	  <img src="img2.jpg">
 	</div>
 	<div class="section2">
 	  <h3>Lorem ipsum</h3>
@@ -51,7 +112,7 @@
 	  Integer sagittis venenatis iaculis. Maecenas tincidunt felis non congue sagittis. </p>
 	</div>
 	<div class="section2">
-	  <img src="pic2.jpg">
+	  <img src="img3.jpg">
 	</div>
 	</div>
   </body>
