--- a/slice and dice/index.html
+++ b/slice and dice/index.html
@@ -47,7 +47,7 @@ function showSlides(n) {
 		    <li><a href="#">BLOG</a> &nbsp; &nbsp; </li>
 	      </ul>
 		</div>
-        <div class="text"><h1>Caption Text</h1></div>
+        <div class="text"><h1>Caption Text 1</h1></div>
       </div>
 	  <div class="mySlides fade" id="second">
         <div class="nav">
@@ -59,7 +59,7 @@ function showSlides(n) {
 		    <li><a href="#">BLOG</a> &nbsp; &nbsp; </li>
 	      </ul>
 		</div>
-        <div class="text"><h1>Caption Text</h1></div>
+        <div class="text"><h1>Caption Text 2</h1></div>
       </div>
 	  <div class="mySlides fade" id="third">
         <div class="nav">
@@ -71,7 +71,7 @@ function showSlides(n) {
 		    <li><a href="#">BLOG</a> &nbsp; &nbsp; </li>
 	      </ul>
 		</div>
-        <div class="text"><h1>Caption Text</h1></div>
+        <div class="text"><h1>Caption Text 3</h1></div>
       </div>
 	  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -82,34 +82,33 @@ function showSlides(n) {
 	</div>
 	<div class="section1">
 	  <img src="icon1.png">
-	  <p>Oprem dobro</p>
+	  <p>Lorem ipsum dolor sit amet</p>
 	</div>
 	<div class="section1">
 	  <img src="icon2.png">
-	  <p>Oprem dobro</p>
+	  <p>Lorem ipsum dolor sit amet</p>
 	</div>
 	<div class="section1">
 	  <img src="icon3.png">
-	  <p>Oprem dobro</p>
+	  <p>Lorem ipsum dolor sit amet</p>
 	</div>
 	<div class="section1">
 	  <img src="icon4.png">
-	  <p>Oprem dobro</p>
+	  <p>Lorem ipsum dolor sit amet</p>
 	</div>
 	<div class="section2">
 	  <img src="img2.jpg">
 	</div>
 	<div class="section2">
 	  <h3>Lorem ipsum</h3>
-	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In lacinia laoreet ultricies.
-	  Sed vitae accumsan velit. Sed sit amet quam justo. Duis id egestas elit. Integer sagittis venenatis iaculis.
-	  Maecenas tincidunt felis non congue sagittis. </p>
+	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</br> In lacinia laoreet ultricies.
+	  Sed vitae accumsan velit.</br> Sed sit amet quam justo. Duis id egestas elit. </p>
 	</div>
 	<div class="section2">
 	  <h3>Lorem ipsum</h3>
-	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In lacinia laoreet ultricies. Sed vitae accumsan velit.
+	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </br> In lacinia laoreet ultricies. Sed vitae accumsan velit. </br>
 	  Sed sit amet quam justo. Duis id egestas elit.
-	  Integer sagittis venenatis iaculis. Maecenas tincidunt felis non congue sagittis. </p>
+	  </p>
 	</div>
 	<div class="section2">
 	  <img src="img3.jpg">
