--- a/slice and dice/index.html
+++ b/slice and dice/index.html
@@ -21,17 +21,17 @@ function currentSlide(n) {
 function showSlides(n) {
   var i;
   var slides = document.getElementsByClassName("mySlides");
-  //var dots = document.getElementsByClassName("dot");
+  var dots = document.getElementsByClassName("dot");
   if (n > slides.length) {slideIndex = 1}
   if (n < 1) {slideIndex = slides.length}
   for (i = 0; i < slides.length; i++) {
       slides[i].style.display = "none";
   }
-  //for (i = 0; i < dots.length; i++) {
-      //dots[i].className = dots[i].className.replace(" active", "");
-  //}
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+  }
   slides[slideIndex-1].style.display = "block";
-  //dots[slideIndex-1].className += " active";
+  dots[slideIndex-1].className += " active";
 }
 	</script>
   </head>
@@ -76,6 +76,11 @@ function showSlides(n) {
       </div>
 	  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
+	  <div style="text-align:center">
+	    <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+	   </div>
 	</div>
 	<div class="about">
 	  <h1>About us</h1>
