--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,8 +57,20 @@
 	  <div class="col-lg-12">
 	    <h1>Projects</h1>
 		<hr></br>
-		<strong>Memory game:</strong></br></br>
-		<a href="https://pepa99.github.io/memory_game/" target="_blank"><img src="empty.png"></a>
+		<table class="table table-striped table-light text-center">
+		<tr>
+		  <td><strong>Memory game</strong></td>
+		  <td><strong>N Queens</strong></td>
+		</tr>
+		<tr>
+		 <td>
+		  <a href="https://pepa99.github.io/memory_game/" target="_blank"><img src="empty.png" width="100"></a>
+		 </td>
+		 <td>
+		  <a href="https://pepa99.github.io/n_queen_problem/" target="_blank"><img src="four.jpg" width="100"></a>
+		 </td>
+		</tr>
+		</table>
 	  </div>
 	  </div>
       <div class="row" id="accomp">
