--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -43,7 +43,7 @@
         <h1>Education</h1><hr></br>
         <ul>
           <li>
-            <b>Faculty of Electrical Engineering</b>, Union University, Belgrade Oct, 2018-Present <br>
+            <b>Faculty of Electrical Engineering</b>, Belgrade Oct, 2018-Present <br>
             <i>Third Year, Signals and Systems,  9.31/10.00 GPA</i> 
           </li>
           <li>
@@ -86,7 +86,7 @@
             </a></br>&nbsp; 
           </li>
           <li>
-             <b>Various awards from State contests and Serbian Olympiads in physics and mathematics  2011 – 2018</b> <br>
+             <b>Various awards from State contests and Serbian Olympiads in physics and mathematics  2011 - 2018</b> <br>
              Some of them:
              <ul>
                <li>3rd prize, Serbian Physics Olympiad   2018</li> 
@@ -98,7 +98,7 @@
              </ul>
           </li> 
           <li>
-              <b>"Nova Niška elita" award, Rotary Club Nis 2018</b></br></br>
+              <b>"Nova Niska elita" award, Rotary Club Nis 2018</b></br></br>
               <a href="http://www.rc-constantinethegreat.org.rs/nne" target="_blank"><img src="nne18.png" width="500" height="400"></a>  
           </li>   
         </ul>
