--- a/n_queen_problem/index.html
+++ b/n_queen_problem/index.html
@@ -104,6 +104,11 @@
 	   <input type="button" class="btn btn-danger" value="Solve" onclick="solve();">
 	  </div>
 	</div>
+	<div class="row">
+	  <div class="offset-sm-9 col-sm-3">
+	    <strong>Created by <a href="https://pepa99.github.io/portfolio/">Predrag Cvetkovic</a></strong>
+	  </div>
+	</div>
   </div>	
   </body>
 </html>
