--- a/n_queen_problem/index.html
+++ b/n_queen_problem/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>N Queens problem</title>
+    <title>N Queens problem solved</title>
+	<meta name="description" content="N Queens problem solved by Predrag Cvetkovic.">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<script>
